Make sure cloud events have spacing on small screens

--- a/static/css/section/_cloud.scss
+++ b/static/css/section/_cloud.scss
@@ -171,8 +171,14 @@
     }
   }
 
-  .event-details-wrapper h3 {
-    margin-bottom: 5px;
+  .event-details-wrapper {
+    div {
+      overflow: hidden;
+    }
+
+    h3 {
+      margin-bottom: 5px;
+    }
   }
 
   .event-details {
